--- a/Portfolio  Site/index.html
+++ b/Portfolio  Site/index.html
@@ -8,9 +8,10 @@
   <title>Abdul Satar Shirzai Yadegari</title>
 
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/medium-style.css" media="screen  and (max-width: 880px)">
+  <link rel="stylesheet" href="css/small-style.css" media="screen  and (min-width: 0px) and (max-width: 450px)">
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <script src="js/main.js"></script>
 </head>
 
 <body id="top">
