--- a/Portfolio  Site/index.html
+++ b/Portfolio  Site/index.html
@@ -22,6 +22,7 @@
         <a href="#top">Satar Sy</a>
       </span>
       <ul class="menu">
+        <!-- <li id="brand"><a href="#top">Satar Sy</a></li> -->
         <li><a href="#top">HOME</a></li>
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#life">LIFE</a></li>
@@ -71,8 +72,8 @@
       <h3>life</h3>
       <h5>Here is some of my favorite sport & hobbys</h5>
       <div id="life-container">
+        
         <div class="life">
-
           <img src="image/cliff-diving.jpg" title="Cliff Diving" alt="cliff diving image">
           <div class="life-info">
             <h4>Cliff Diving</h4>
