--- a/Cat-Clicker/index.html
+++ b/Cat-Clicker/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cat Clicker</title>
     <link rel="icon" sizes="32x32" href="https://cdn4.iconfinder.com/data/icons/black-cat-pattern/94/cat2-512.png">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
         integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
 </head>
@@ -29,21 +29,23 @@
         </span>
         <h4>Please select yoour favorite CAT name to start.</h4>
 
-        <!--  -->
-
         <ul class="cat-name-container"></ul>
-        <!--  -->
         <div class="cat-image">
             <img src="img/cute-cat.jpeg" alt="Cute cat">
             <h3>cute Cat</h3>
         </div>
 
-        <!--  -->
         <p>clicked number <span class="click-num">0 </span></p>
+        <div class="cat-info">
+            <p>The cat is a small carnivorous mammal. It is the only domesticated species in the family Felidae and
+                often referred to as the domestic cat to distinguish it from wild members of the family. The cat is
+                either a house cat or a farm cat, which which are pets, or a feral cat, which ranges freely and avoids
+                human contact.</p>
+        </div>
 
     </section>
 
-    <script src="main.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
