--- a/MyReads-A-Book-Tracking-App/public/index.html
+++ b/MyReads-A-Book-Tracking-App/public/index.html
@@ -4,8 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" href="%PUBLIC_URL%/book-open-outline-filled.png">
+    <link rel="stylesheet" href="book-open-outline-filled.png">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700">
-    <title>Satar Sy's Books Reads</title>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+        integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+    <title>Satar Sy Books Reads</title>
   </head>
   <body>
     <div id="root"></div>
